--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
         web security attacks? Note: the word count for your answer should not be
         greater than 250 words
       </p>
-      <p id="Web-security-answer">Fanta jallow</p>
+      <p id="Web-security-answer">
+        I would advise a potential client to use a strong password with
+        combination number, and special characters, and not used for multiple
+        accounts, which would make it less damaging if it were to happen. I
+        would also recommend using a verifying method like a multi-factor
+        authentication, to Logg into different accounts, which adds a second
+        form of identifying such as a code to their phone, in addition to their
+        password, just like OneLogin, we use for login to Moodle.
+      </p>
     </body>
   </head>
 </html>
